--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+/* @import url('href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css') */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+/* .background{
+  height: 100vh;
+  width: 100vw;
+  background: url("./picture/cabin.jpg") no-repeat center center fixed; ;
+  webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
+
+
+.navigation-bar{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 5rem;
+  background-color: #534f4a12;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#only-name{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+}
+#only-name h1{
+  font-size: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+nav{
+  display: flex;
+  width: 100%;
+  height: 5rem;
+  justify-content: space-around;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav a{
+  font-family: 'Poppins', sans-serif;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 400;
+  border: 1px solid white;
+  padding: 3px;
+  border-radius: 10px;
+  color: black;
 }
+
+nav a:hover{
+  background-color: #bacbcf61;
+  border: 1px solid white;
+  transition: .5s;
+}
+nav a.hero-name{
+  font-family: 'Poppins', sans-serif;
+  font-size: 50px;
+  font-weight: 800;
+
+}
+
