--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,10 @@
 /* @import url('href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css') */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
-/* .background{
-  height: 100vh;
-  width: 100vw;
-  background: url("./picture/cabin.jpg") no-repeat center center fixed; ;
-  webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-} */
-
 
 .navigation-bar{
   position: absolute;
+  z-index: 1;
   top: 0;
   left: 0;
   width: 100vw;
