--- a/src/css/Project.css
+++ b/src/css/Project.css
@@ -8,3 +8,92 @@
     height: 100%;
     width: 100vw;
 }
+
+.project-container::-webkit-scrollbar{
+    display: none;
+}
+.projects-all{
+    margin-top: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 88%;
+    width: 95%;
+    border: 5px solid rgba(0, 0, 0, 0.372);
+    background-color: rgba(255, 255, 255, 0.317);
+    position: relative;
+    
+}
+
+.my-projects{
+    text-align: center;
+}
+
+.project-card-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height:90%;
+    overflow-y: scroll;
+    
+    
+}
+
+.project-card-container::-webkit-scrollbar{
+    display: none;
+}
+
+.project-card{
+    display: flex;
+    color: white;
+    flex-direction: column;
+    align-items: center;
+    width: 65%;
+    min-height:500px;
+    background-color: rgba(11, 34, 19, 0.584);
+    margin-bottom: 10px;
+    border-top-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    transition: .3s;
+}
+.project-card-top{
+    display: flex;
+    height: 40%;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap ;
+}
+.project-card-top h2{
+    font-size: 30px;
+    margin-bottom: -3px;
+    font-weight: 600;
+}
+.project-card-top p{
+    font-weight: 600;
+}
+.project-card-top a{
+    font-weight: 600;
+    color: rgba(232, 233, 233, 0.824);
+}
+.project-card-bottom{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+    /* background-color: cadetblue; */
+}
+.project-card-bottom img{
+    max-width: 95%;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+}
+
+.project-card:hover{
+    border-top-right-radius: 40px;
+    border-bottom-left-radius: 40px;
+    border-top-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    background-color: rgba(11, 34, 19, 0.742)
+}
+
