--- a/src/css/Resume.css
+++ b/src/css/Resume.css
@@ -1,7 +1,7 @@
 .contact-container{
     font-family: 'Poppins', sans-serif;
     overflow: scroll;
-    background: linear-gradient(white 65%, #b32313e2);
+    background: linear-gradient(white 65%, #932215bf);
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -13,4 +13,75 @@
 
 .contact-container::-webkit-scrollbar{
     display: none;
+}
+.contact-me{
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    height: 85%;
+    width: 50%;
+    border: 5px solid rgba(0, 0, 0, 0.598);
+    background-color: rgba(255, 255, 255, 0.694);
+    position: relative;
+    margin-bottom: 2rem;
+    border-top-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+}
+
+.contact-top{
+    text-align: center;
+}
+.contact-bottom{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    /* background-color: blue; */
+}
+.contact-bottom a{
+    font-size: 18px;
+    font-weight: 600;
+    color: rgba(27, 107, 136, 0.824);
+    text-align: center;
+}
+.email-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 1rem;
+    margin-top: -10%;
+    width: 25%;
+}
+.email-container h3{
+    margin:0
+}
+
+.linked-in-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 1rem;
+    width: 25%;
+}
+.linked-in-container h3{
+    margin:0
+}
+
+.resume-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 1rem;
+    width: 25%;
 }
